--- a/ecommerce/src/pages/Carrinho/Carrinho.css
+++ b/ecommerce/src/pages/Carrinho/Carrinho.css
@@ -1,6 +1,6 @@
 .itemCarrinho{
   margin: 25px;
-  background-color: white;
+  /* background-color: white; */
   border: solid 1px white;
   float: right;
   align-items: center;
